Theme Selector Structure Style Completed

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
               <span>3</span>
               <div>
                 <div class="pointer"></div>
-                <div class="option-one"></div>
-                <div class="option-two"></div>
-                <div class="option-three"></div>
+                <div class="option option-one"></div>
+                <div class="option option-two"></div>
+                <div class="option option-three"></div>
               </div>
             </div>
           </div>
