--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <button type="button" class="alphanumeric" value="0">0</button>
         <button type="button" class="alphanumeric" value="/">/</button>
         <button type="button" class="alphanumeric" value="*">x</button>
-        <button type="button" class="operation" value="RESET">RESET</button>
-        <button type="button" class="result" value="=">=</button>
+        <button id="reset-button" type="button" class="operation" value="RESET">RESET</button>
+        <button id="equal-button" type="button" class="result" value="=">=</button>
       </div>
     </main>
   </body>
