Themes Setup Concluded

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <title>Frontend Mentor | Calculator</title>
   </head>
-  <body>
+  <body class="theme-one">
     <main class="calc">
       <header>
         <div class="theme-selector">
