Theme Switcher Concluded

--- a/index.html
+++ b/index.html
@@ -65,5 +65,7 @@
         <button id="equal-button" type="button" class="result" value="=">=</button>
       </div>
     </main>
+
+    <script src="src/js/theme-switcher.js"></script>
   </body>
 </html>
