Calculator Funcionality Concluded

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
           </div>
         </div>
         <div class="display">
-          <span>399,981</span>
+          <span></span>
         </div>
       </header>
       <div class="keypad">
         <button type="button" class="alphanumeric" value="7">7</button>
         <button type="button" class="alphanumeric" value="8">8</button>
         <button type="button" class="alphanumeric" value="9">9</button>
-        <button type="button" class="operation" value="DEL">DEL</button>
+        <button type="button" class="operation delete-button" value="DEL">DEL</button>
         <button type="button" class="alphanumeric" value="4">4</button>
         <button type="button" class="alphanumeric" value="5">5</button>
         <button type="button" class="alphanumeric" value="6">6</button>
@@ -61,11 +61,12 @@
         <button type="button" class="alphanumeric" value="0">0</button>
         <button type="button" class="alphanumeric" value="/">/</button>
         <button type="button" class="alphanumeric" value="*">x</button>
-        <button id="reset-button" type="button" class="operation" value="RESET">RESET</button>
-        <button id="equal-button" type="button" class="result" value="=">=</button>
+        <button type="button" class="operation reset-button" value="RESET">RESET</button>
+        <button type="button" class="result equal-button" value="=">=</button>
       </div>
     </main>
 
     <script src="src/js/theme-switcher.js"></script>
+    <script src="src/js/calculator.js"></script>
   </body>
 </html>
