Input Filter Added and Input Scroll Behavior Corrected

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="display">
-          <span></span>
+          <input type="text" value="" id="display-input" disabled />
         </div>
       </header>
       <div class="keypad">
@@ -67,6 +67,7 @@
     </main>
 
     <script src="src/js/theme-switcher.js"></script>
-    <script src="src/js/calculator.js"></script>
+    <script type="module" src="src/js/calculator.js"></script>
+    <script type="module" src="src/js/display-scroll.js"></script>
   </body>
 </html>
