--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <button type="button" class="alphanumeric" value="-">-</button>
         <button type="button" class="alphanumeric" value=".">.</button>
         <button type="button" class="alphanumeric" value="0">0</button>
-        <button type="button" class="alphanumeric" value="/">/</button>
-        <button type="button" class="alphanumeric" value="*">x</button>
+        <button type="button" class="alphanumeric" value="÷">÷</button>
+        <button type="button" class="alphanumeric" value="x">x</button>
         <button type="button" class="operation reset-button" value="RESET">RESET</button>
         <button type="button" class="result equal-button" value="=">=</button>
       </div>
