Theme Preference Checker Concluded

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <title>Frontend Mentor | Calculator</title>
   </head>
-  <body class="theme-one">
+  <body>
     <main class="calc">
       <header>
         <div class="theme-selector">
@@ -66,7 +66,7 @@
       </div>
     </main>
 
-    <script src="src/js/theme-switcher.js"></script>
+    <script type="module" src="src/js/theme-switcher.js"></script>
     <script type="module" src="src/js/calculator.js"></script>
     <script type="module" src="src/js/display-scroll.js"></script>
   </body>
